runoob
root@kali:~# python2 one.py
  File "one.py", line 5
    for j in range(1,5):
      ^
IndentationError: expected an indented block
